--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
+*{
+  margin: 0;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+body{
+  font-family: sans-serif;
+}
+
+.speech{
+  width: 50px;
+}
+
+.group{
+  margin: 7px 0;
+}
+
+textarea{
+  width: 100%;
+  padding: 5px 10px;
+  border: 1px solid black;
+  outline: none;
+  border-radius: 3px;
+}
+
+button{
+  width: 100%;
+  display: block;
+  padding: 10px 22px;
+  color: brown;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+  background-color: bisque;
+}
+
+h2{
+  margin-bottom: 10px;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
